<resources>
    <string name="app_name">IwFashionApp</string>
    <string name="drawer_header">IW Fashion</string>
    <string name="close">Close</string>
    <string name="open">Open</string>
    <string name="reservar">Solicitar</string>
    <string name="detallesProduct">Ver más detalles</string>
    <string name="ShowProduct">Vamos de compras...</string>

    <string name="ropa">Ropa</string>
    <string name="zapatos">Zapatos</string>
    <string name="accesorios">Accesorios</string>
    <string name="todo">Ver todos los productos</string>
    <string name="open_drawer">Abrir el menú de navegacion</string>
    <string name="close_drawer">Cerrar el menú de navegacion</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="agregar_carrito">Agregar al carrito</string>
    <string name="enviar_custom_design">Enviar diseño personalizado</string>

    <string name="cart_pay">Finalizar pedido</string>
    <string name="total">$0.00</string>
    <string name="cart_update">Actualizar</string>


    <string name="correo_desing">tucorreo@gmail.com</string>
    <string name="tel_desing">7645-3233</string>
    <string name="solicitar_desing">Solicitar diseño</string>
    <string name="description_desing">Escriba una breve descripción del diseño</string>

    <!-- Strings para login, resetpassword & new user -->
    <string name="btn_log">Iniciar sesión</string>
    <string name="lbl_newAccount">¿Sin cuenta aún? Registrate</string>
    <string name="btn_google">Accede con Google</string>
    <string name="btn_fb">Accede con Facebook</string>
    <string name="lbl_forgot">¿Olvidaste la contraseña?</string>
    <string name="tv_correologin">Correo electrónico</string>
    <string name="tv_pass">Contraseña</string>

    <string name="lbl_titlenewuser">Registrate</string>
    <string name="edt_name">Nombre</string>
    <string name="edt_sname">Apellido</string>
    <string name="edt_confpass">Confirmar contraseña</string>
    <string name="btn_regnewuser">Registrarse</string>

    <string name="lbl_email">Ingrese el correo electrónico asociado a su cuenta</string>
    <string name="btn_reset">Restablecer contraseña</string>
    <string name="btn_back">Volver</string>

    <string name="wrong_mail">Correo electrónico incorrecto</string>
    <string name="wrong_pass">La contraseña debe tener 6 dígitos mínimo</string>

    <string name="btn_logoutfire">Cerrar sesión firebase</string>
    <string name="btn_logoutgoogle">Cerrar sesión google</string>
    <string name="btn_logoutfacebook">Cerrar sesión facebook</string>
    <string name="btn_deletegoogle">Desvincular google</string>

    <string name="facebook_application_id" translatable="false">158984906034692</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb158984906034692</string>
</resources>