<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient">


    <!-- TODO: Update blank fragment layout -->

    <Button
        android:id="@+id/btn_accesories"
        android:layout_width="97dp"
        android:layout_height="50dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="112dp"
        android:background="#FFFFFF"
        android:text="@string/accesorios"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/ListViewProducts"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btn_shoes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="56dp"
        android:layout_marginRight="56dp"
        android:layout_marginBottom="112dp"
        android:background="#FFFFFF"
        android:text="@string/zapatos"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/ListViewProducts"
        app:layout_constraintEnd_toStartOf="@+id/btn_accesories" />

    <Button
        android:id="@+id/btn_all"
        android:layout_width="210dp"
        android:layout_height="51dp"
        android:background="#FFFFFF"
        android:text="@string/todo"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/ListViewProducts"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.822" />

    <ListView
        android:id="@+id/ListViewProducts"
        android:layout_width="412dp"
        android:layout_height="515dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent">


    </ListView>

    <Button
        android:id="@+id/btn_clothes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginBottom="112dp"
        android:background="#FFFFFF"
        android:text="@string/ropa"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/ListViewProducts"
        app:layout_constraintEnd_toStartOf="@+id/btn_shoes"
        app:layout_constraintHorizontal_bias="0.263"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>