<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">


    <!-- TODO: Update blank fragment layout -->

    <Button
        android:id="@+id/btn_accesories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="#FFFFFF"
        android:text="@string/accesorios"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/ListViewProducts"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.913"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <Button
        android:id="@+id/btn_shoes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="44dp"
        android:layout_marginRight="44dp"
        android:background="#FFFFFF"
        android:text="@string/zapatos"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/ListViewProducts"
        app:layout_constraintEnd_toStartOf="@+id/btn_accesories"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <Button
        android:id="@+id/btn_all"
        android:layout_width="208dp"
        android:layout_height="53dp"
        android:background="#FFFFFF"
        android:text="@string/todo"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/ListViewProducts"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_shoes" />

    <ListView
        android:id="@+id/ListViewProducts"
        android:layout_width="412dp"
        android:layout_height="515dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent">


    </ListView>

    <Button
        android:id="@+id/btn_clothes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:background="#FFFFFF"
        android:text="@string/ropa"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/ListViewProducts"
        app:layout_constraintEnd_toStartOf="@+id/btn_shoes"
        app:layout_constraintHorizontal_bias="0.32"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.289" />

</androidx.constraintlayout.widget.ConstraintLayout>