<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">


    <!-- TODO: Update blank fragment layout -->

    <Button
        android:id="@+id/btn_accesories"
        android:layout_width="113dp"
        android:layout_height="47dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:background="#FFFFFF"
        android:text="@string/accesorios"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/ListViewProducts"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.007" />

    <Button
        android:id="@+id/btn_shoes"
        android:layout_width="111dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="20dp"
        android:background="#FFFFFF"
        android:text="@string/zapatos"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/ListViewProducts"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_all"
        android:layout_width="208dp"
        android:layout_height="52dp"
        android:background="#FFFFFF"
        android:text="@string/todo"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/ListViewProducts"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_clothes"
        app:layout_constraintVertical_bias="0.294" />

    <ListView
        android:id="@+id/ListViewProducts"
        android:layout_width="396dp"
        android:layout_height="528dp"
        android:layout_marginBottom="4dp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_all">


    </ListView>

    <Button
        android:id="@+id/btn_clothes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="20dp"
        android:background="#FFFFFF"
        android:text="@string/ropa"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/btn_accesories"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toEndOf="@+id/btn_shoes"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>