<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CartFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF">

        <ListView
            android:id="@+id/ListViewCart"
            android:layout_width="376dp"
            android:layout_height="594dp"
            android:layout_marginTop="48dp"
            app:layout_constraintBottom_toTopOf="@+id/txt_total_cart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.485"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

        </ListView>

        <TextView
            android:id="@+id/txt_total_cart"
            android:layout_width="140dp"
            android:layout_height="39dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="24dp"
            android:textColor="#040430"
            android:textSize="24sp"
            android:textStyle="bold|italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_update_cart" />

        <Button
            android:id="@+id/btn_payment"
            android:layout_width="113dp"
            android:layout_height="43dp"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginBottom="20dp"
            android:background="#FF100F0F"
            android:shadowColor="#FFFFFF"
            android:text="@string/cart_pay"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_update_cart"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btn_update_cart"
            android:layout_width="93dp"
            android:layout_height="40dp"
            android:layout_marginStart="18dp"
            android:layout_marginLeft="18dp"
            android:layout_marginEnd="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="20dp"
            android:background="#FF100F0F"
            android:text="@string/cart_update"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/txt_total_cart"
            app:layout_constraintStart_toEndOf="@+id/btn_payment" />

        <Button
            android:id="@+id/btnVerProductos"
            android:layout_width="141dp"
            android:layout_height="53dp"
            android:layout_marginStart="18dp"
            android:layout_marginLeft="18dp"
            android:layout_marginEnd="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="20dp"
            android:background="#FF100F0F"
            android:text="@string/ShowProduct"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/txt_total_cart"
            app:layout_constraintStart_toEndOf="@+id/btn_payment" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>